tests/ui/traits/copy-impl-cannot-normalize.stderr
error[E0277]: the trait `Clone` is not implemented for `Foo<T>`
  --> $DIR/copy-impl-cannot-normalize.rs:22:18
   |
LL | impl<T> Copy for Foo<T> {}
   |                  ^^^^^^ the trait `Clone` is not implemented for `Foo<T>`, which is required by `Foo<T>: Clone`
   |
note: required for `Foo<T>` to implement `Clone`
  --> $DIR/copy-impl-cannot-normalize.rs:12:9
   |
LL | impl<T> Clone for Foo<T>
   |         ^^^^^     ^^^^^^
LL | where
LL |     T: TraitFoo,
   |        -------- unsatisfied trait bound introduced here
note: required by a bound in `Copy`
  --> $SRC_DIR/core/src/marker.rs:LL:COL
help: consider introducing a `where` clause, but there might be an alternative better way to express this requirement
   |
LL | impl<T> Copy for Foo<T> where Foo<T>: Clone {}
   |                         +++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
